# CMSC495

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: python-app.yml
Notes/: Week1.md  Week2.md
flask_app/: README.md  __main__.py  api.py  app.py  freeze.py  golden_hour_data.py  location.py  requirements.txt  user.py  users.py
flask_app/static/css/: style.css
flask_app/static/js/: shared.js
flask_app/templates/: base.html  cityData.html  favoriteLocations.html  index.html  invalid_location.html  quip.html  selectLocation.html  weather_grid.html
test/: test_.py  test_integration.py  test_unit_eventdata.py  test_unit_users.py  unit_test.py
test/data/: users.json
