[project]
name="GoldenHour"
version="0.0.3"
dependencies=[
    "Flask==2.3.3",
    "gunicorn==23.0.0",
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "build==1.3.0"
]

[project.scripts]
goldenhour="flask_app.app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['flask_app']

[tool.setuptools.package-data]
flask_app=[
    'static/**/*',
    'templates/**/*'
]
